--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="../css/style.css">
     <title>Website</title>
 </head>
 <body>
@@ -16,14 +17,14 @@
     </header>
     <div id="products">
         <div class="product">
-            <img src="../images/1.jpg">
+            <img src="../images/1.jpg" height="200" width="200">
             <h2>Car 1</h2>
             <P>Description of product</P>
             <p>$205679.00</p>
             <button>add to cart</button>
         </div>
         <div class="product">
-            <img src="../images/2.jpg">
+            <img src="../images/2.jpg" height="200" width="200">
             <h2>Audi</h2>
             <P>Description of product</P>
             <p>$50304.00</p>
@@ -31,20 +32,20 @@
         </div>
         
         <div class="product">
-            <img src="../images/3.jpg">
+            <img src="../images/3.jpg" height="200" width="200">
             <h2> Mercedes-Benz</h2>
             <P>Description of product</P>
             <p>$7000566.00</p>
             <button>add to cart</button>
         </div>
         <div class="product">
-            <img src="../images/4.jpg">
+            <img src="../images/4.jpg" height="200" width="200">
             <h2>Car 2</h2>
             <P>Description of product</P>
             <p>$8475950.00</p>
             <button>add to cart</button>
         </div>
-        </div>
+    </div>
         
 </body>
 </html>
