--- a/html/index.html
+++ b/html/index.html
@@ -18,16 +18,16 @@
     <div id="products">
         <div class="product">
             <img src="../images/1.jpg" height="200" width="200">
-            <h2>Car 1</h2>
+            <h2>TATA</h2>
             <P>Description of product</P>
-            <p>$205679.00</p>
+            <p>$2079.00</p>
             <button>add to cart</button>
         </div>
         <div class="product">
             <img src="../images/2.jpg" height="200" width="200">
             <h2>Audi</h2>
             <P>Description of product</P>
-            <p>$50304.00</p>
+            <p>$5034.00</p>
             <button>add to cart</button>
         </div>
         
@@ -35,14 +35,14 @@
             <img src="../images/3.jpg" height="200" width="200">
             <h2> Mercedes-Benz</h2>
             <P>Description of product</P>
-            <p>$7000566.00</p>
+            <p>$7000.00</p>
             <button>add to cart</button>
         </div>
         <div class="product">
             <img src="../images/4.jpg" height="200" width="200">
-            <h2>Car 2</h2>
+            <h2>Hyundai creta</h2>
             <P>Description of product</P>
-            <p>$8475950.00</p>
+            <p>$84759.00</p>
             <button>add to cart</button>
         </div>
     </div>
