--- a/html/blog_day5.html
+++ b/html/blog_day5.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/blog_day5.css">
     <title>Blog</title>
 </head>
 <body>
     <nav>
         <div class="menu">
-            <div class="logo">My Blog</div>
+            <div class="logo">
+                <a href="">My Blog</a>
+             </div>
             <ul>
                <li><a href="#">Home</a></li>
                <li><a href="#">About Me</a></li>
