--- a/html/netflix.html
+++ b/html/netflix.html
@@ -3,9 +3,156 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="Paul" content="Netflix Website">
+ <link rel="stylesheet" href="../css/netflix.css"/>
+ <link rel="icon" href="../images/netflix/netflix.jpg"/>
+    <title>Netflix Blog</title>
 </head>
 <body>
-    
+
+    <!-- Header -->
+<div class="nav">
+    <img src="../images/netflix/netflix.jpg" alt="Logo Netflix" class="logo"/>
+    <img src="../images/netflix/netflix.jpg" alt="Logo Netflix" class="logo_avatar"/>
+
+</div>
+        <div class="banner">
+            <div class="contents">
+                <h2 class="banner_title">Money Heist! 📰 </h2>
+                <div class="banner_buttons">
+                    <button class="banner_button">Play</button>
+                    <button class="banner_button">My List</button>
+                </div>
+                <div class="banner_description">
+                    <p>The world's most wanted thief, Stranger, recruits a group of eccentric robbers to pull </p>
+                </div>
+            </div>
+            <div class="banner_fade">
+                
+            </div>
+        </div>
+
+    <!-- Netflix  Logo -->
+    <div class="row">
+        <h2>Netflix</h2>
+        <div class="rowposter">
+            <img src="../images/netflix/a.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/b.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/c.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/d.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/e.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/f.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/g.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/h.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/i.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
+
+            <!-- small  image for mobile view -->
+            <img src="../images/netflix/a.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/b.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/c.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/d.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/e.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/f.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/g.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/h.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/i.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+        </div>
+    </div>
+    <!-- Trending  Now Section -->
+    <div class="row">
+        <h2>Trending</h2>
+        <div class="rowposter">
+            <img src="../images/netflix/a.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/b.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/c.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/d.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/e.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/f.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/g.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/h.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/i.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/a.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/b.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/c.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/d.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/e.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/f.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/g.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/h.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/i.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+        </div>
+    </div>
+    <!-- Action movies -->
+    <div class="row">
+        <h2>Action</h2>
+        <div class="rowposter">
+            <img src="../images/netflix/a.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/b.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/c.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/d.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/e.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/f.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/g.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/h.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/i.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/a.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/b.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/c.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/d.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/e.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/f.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/g.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/h.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/i.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+        </div>
+    </div>
+    <!-- Comedy movies -->
+    <div class="row">
+        <h2>Comedy</h2>
+        <div class="rowposter">
+            <img src="../images/netflix/a.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/b.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/c.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/d.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/e.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/f.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/g.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/h.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/i.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/a.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/b.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/c.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/d.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/e.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/f.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/g.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/h.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/i.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+        </div>
+    </div>
+    <!--  Horror movies -->
+    <div class="row">
+        <h2>Horror</h2>
+        <div class="rowposter">
+            <img src="../images/netflix/a.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/b.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/c.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/d.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/e.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/f.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/g.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/h.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/i.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/a.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/b.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/c.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/d.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/e.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/f.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/g.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/h.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/i.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
+        </div>
+    </div>
 </body>
 </html>
