--- a/html/Un_Responsive.html
+++ b/html/Un_Responsive.html
@@ -15,18 +15,35 @@
     </div>
     <!-- nav bar -->
     <div class="container">
-        <div class="logo">
-            <img src="../images/1.jpg" height="50" width="100" alt="" />
-        </div>
-        <div class="navlist">
+        <div class="header">
+            <img src="../images/1.jpg" height="70" width="100" alt="" />
             <ul>
-            <li> <a href="#">HOME</a></li>
-            <li> <a href="#">ABOUT US</a></li>
-            <li> <a href="#">CONTACT US</a></li>
-            <li> <a href="#">PROJECT</a></li>
-            <li> <a href="#">COMPANY</a></li>
+                <li> <a href="#">HOME</a></li>
+                <li> <a href="#">ABOUT </a></li>
+                <li> <a href="#">CONTACT </a></li>
+                <li> <a href="#">PROJECT</a></li>
+                <li> <a href="#">COMPANY</a></li>
             </ul>
         </div>
+        <div class="banner">
+            <img src="../images/2.jpg"  height ="450px" alt="" />
+        </div>
+        <div class="Bannercontent1">
+            <h2 class="heading">Welcome</h2>
+            <p class="pagecontent">Priya Prakash Varrier stole hearts across the nation with a single wink, back in 2018. This was from a scene of her Malayalam film, Oru Adaar Love. Since then, her social media followers have increased by leaps and bounds. The actress has left no stone unturned to keep her fans and followers hooked</p>
+         <a href="#">Read More</a>
+        </div>
+        <div class="Bannercontent2">
+            <h2 class="heading">Welcome</h2>
+            <p class="pagecontent">Priya Prakash Varrier stole hearts across the nation with a single wink, back in 2018. This was from a scene of her Malayalam film, Oru Adaar Love. Since then, her social media followers have increased by leaps and bounds. The actress has left no stone unturned to keep her fans and followers hooked</p>
+         <a href="#">Read More</a>
+        </div>
+        <div class="Bannercontent3">
+            <h2 class="heading">Welcome</h2>
+            <p class="pagecontent">Priya Prakash Varrier stole hearts across the nation with a single wink, back in 2018. This was from a scene of her Malayalam film, Oru Adaar Love. Since then, her social media followers have increased by leaps and bounds. The actress has left no stone unturned to keep her fans and followers hooked</p>
+         <a href="#">Read More</a>
+        </div>
+
     </div>
 
     
