--- a/html/netflix.html
+++ b/html/netflix.html
@@ -6,6 +6,7 @@
     <meta name="Paul" content="Netflix Website">
  <link rel="stylesheet" href="../css/netflix.css"/>
  <link rel="icon" href="../images/netflix/netflix.jpg"/>
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <title>Netflix Blog</title>
 </head>
 <body>
@@ -36,15 +37,15 @@
     <div class="row">
         <h2>Netflix</h2>
         <div class="rowposter">
-            <img src="../images/netflix/a.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
-            <img src="../images/netflix/b.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
-            <img src="../images/netflix/c.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
-            <img src="../images/netflix/d.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
-            <img src="../images/netflix/e.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
-            <img src="../images/netflix/f.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
-            <img src="../images/netflix/g.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
-            <img src="../images/netflix/h.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
-            <img src="../images/netflix/i.jpg" class="row-poster" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/a.jpg" class="row-poster rowlarge" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/b.jpg" class="row-poster rowlarge" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/c.jpg" class="row-poster rowlarge" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/d.jpg" class="row-poster rowlarge" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/e.jpg" class="row-poster rowlarge" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/f.jpg" class="row-poster rowlarge" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/g.jpg" class="row-poster rowlarge" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/h.jpg" class="row-poster rowlarge" height="200" width="200" alt="Logo de la empresa Netflix"/>
+            <img src="../images/netflix/i.jpg" class="row-poster rowlarge" height="200" width="200" alt="Logo de la empresa Netflix"/>
 
             <!-- small  image for mobile view -->
             <img src="../images/netflix/a.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
@@ -154,5 +155,7 @@
             <img src="../images/netflix/i.jpg" class="row-poster" height="100" width="100" alt="Logo de la empresa Netflix"/>
         </div>
     </div>
+
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
 </body>
 </html>
